[workspace]
members = [
  "all-is-cubes",
  "all-is-cubes-desktop",
  "all-is-cubes-server",
  "all-is-cubes-wasm",
]

[profile.dev]
# Enable some optimization to improve interactive performance in manual testing/experimenting.
# In particular, inlining is crucial.
opt-level = 2
# Yes, this is the default for dev, but I want to be precise here: overflow checks are enabled
# for ALL profiles. (Because not catching overflows in release mode is unwise when this is
# precisely where the program is *likely to encounter bigger numbers than in testing*.)
overflow-checks = true
# Faster builds at the cost of pathname-sensitive debug info.
split-debuginfo = "unpacked"

[profile.release]
# TODO: review recommended options for wasm releases
overflow-checks = true

[profile.test]
overflow-checks = true

[profile.bench]
overflow-checks = true

[patch.crates-io]
luminance = { git = "https://github.com/phaazon/luminance-rs.git", branch = "fix/483-webgl-index-buffer-corruption" }
luminance-derive = { git = "https://github.com/phaazon/luminance-rs.git", branch = "fix/483-webgl-index-buffer-corruption" }
luminance-gl = { git = "https://github.com/phaazon/luminance-rs.git", branch = "fix/483-webgl-index-buffer-corruption" }
luminance-glfw = { git = "https://github.com/phaazon/luminance-rs.git", branch = "fix/483-webgl-index-buffer-corruption" }
luminance-front = { git = "https://github.com/phaazon/luminance-rs.git", branch = "fix/483-webgl-index-buffer-corruption" }
luminance-web-sys = { git = "https://github.com/phaazon/luminance-rs.git", branch = "fix/483-webgl-index-buffer-corruption" }
luminance-webgl = { git = "https://github.com/phaazon/luminance-rs.git", branch = "fix/483-webgl-index-buffer-corruption" }
luminance-windowing = { git = "https://github.com/phaazon/luminance-rs.git", branch = "fix/483-webgl-index-buffer-corruption" }
